--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -333,7 +333,7 @@
     },
     "when_health_bill_linked": {
       "title": "Remboursement de santé",
-      "description": "Vous recevrez une notification lorsq'un remboursement a été trouvé pour une de vos dépenses de santé. Cela nécessite d'activer la synchronisation d'un connecteur santé.",
+      "description": "Vous recevrez une notification lorsqu'un remboursement a été trouvé pour une de vos dépenses de santé. Cela nécessite d'avoir connecté une assurance santé à votre Cozy.",
       "notification": {
         "title": "Nouveaux remboursement de santé",
         "content": {
