--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -104,6 +104,7 @@
       "refund": "Vérifier vos remboursements",
       "app": "Accéder à votre espace %{appName}",
       "attach": "Attacher un document",
+      "konnector": "Récupérez vos factures '%{vendor}'",
       "alert": "Créer une alerte",
       "comment": "Ajouter un commentaire",
       "healthExpenseStatus": "Dépense traitée par %{vendors}",
