--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -49,6 +49,8 @@
     "details": "Détails",
     "sharing": "Partage",
     "back-to-accounts": "Revenir aux comptes",
+    "update": "Modifier",
+    "save": "Sauver",
     "delete": "Effacer",
     "deleting": "Effacement...",
     "confirm-deletion": {
