feat: set the right label for AppLinkAction

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -269,6 +269,7 @@
     "actions": {
       "refund": "Check your refunds",
       "comment": "Add a comment",
+      "app": "%{appName} app",
       "bill": "1 invoice",
       "alert": "Create an alert",
       "attach": "Attach a document",
