--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -106,7 +106,7 @@
       "app": "Application %{appName}",
       "refund": "Vérifier vos remboursements",
       "attach": "Attacher un document",
-      "konnector": "Récupérez vos factures %{vendor}",
+      "konnector": "Mes factures",
       "alert": "Créer une alerte",
       "comment": "Ajouter un commentaire",
       "healthExpenseProcessed": {
