--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -107,7 +107,7 @@
       "asset": "Assets accounts",
       "bank": "Bank accounts",
       "cash": "Cash accounts",
-      "checkings": "Checkings accounts",
+      "checkings": "Checking accounts",
       "credit card": "Credit card accounts",
       "liability": "Liability accounts",
       "none": "None",
