--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -137,7 +137,7 @@
       "general": "Catégorisation",
       "total": "Solde de la période",
       "debit": "Dépense nette",
-      "empty_text": "Pas de catégories à afficher."
+      "empty_text": "Il n'y a pas de mouvements bancaires dans cette catégorie."
     },
     "headers": {
       "categories": "Catégories",
