feat(transaction row): add general transaction infos to modal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -282,6 +282,10 @@
       "healthExpensePending": "No reimbursement yet",
       "healthExpenseBill": "%{vendor} Statement",
       "vendorsGlue": "and"
+    },
+    "modal": {
+      "credit": "Credited at",
+      "debit": "Debited at"
     }
   },
 
