feat: show bank name in modal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -283,9 +283,9 @@
       "healthExpenseBill": "%{vendor} Statement",
       "vendorsGlue": "and"
     },
-    "modal": {
-      "credit": "Credited at",
-      "debit": "Debited at"
+    "infos": {
+      "account": "Account",
+      "institution": "Bank"
     }
   },
 
