--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -117,9 +117,9 @@
       "healthExpenseBill": "Relevé %{vendor}",
       "vendorsGlue": "et"
     },
-    "modal": {
-      "credit": "Crédité le",
-      "debit": "Débité le"
+    "infos": {
+      "account": "Compte",
+      "institution": "Banque"
     }
   },
 
