feat: new transaction modal (#100)

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -108,7 +108,7 @@
       "attach": "Attacher un document",
       "konnector": "Mes factures",
       "alert": "Créer une alerte",
-      "comment": "Ajouter un commentaire",
+      "comment": "Commentaire - Bientôt disponible",
       "healthExpenseProcessed": {
         "single": "1 remboursement",
         "plural": "%{nbReimbursements} remboursements"
@@ -116,6 +116,10 @@
       "healthExpensePending": "Remboursements en attente",
       "healthExpenseBill": "Relevé %{vendor}",
       "vendorsGlue": "et"
+    },
+    "infos": {
+      "account": "Compte",
+      "institution": "Banque"
     }
   },
 
