--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -268,7 +268,7 @@
     },
     "actions": {
       "refund": "Check your refunds",
-      "comment": "Add a comment",
+      "comment": "Comment - available soon",
       "app": "%{appName}",
       "bill": "1 invoice",
       "alert": "Create an alert",
@@ -282,6 +282,10 @@
       "healthExpensePending": "No reimbursement yet",
       "healthExpenseBill": "%{vendor} Statement",
       "vendorsGlue": "and"
+    },
+    "infos": {
+      "account": "Account",
+      "institution": "Bank"
     }
   },
 
