fix(virtual groups): fix translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -108,6 +108,7 @@
       "bank": "Bank accounts",
       "cash": "Cash accounts",
       "checkings": "Checking accounts",
+      "creditcard": "Credit card accounts",
       "credit card": "Credit card accounts",
       "liability": "Liability accounts",
       "none": "None",
