--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -157,7 +157,8 @@
       "asset": "Comptes d'actif",
       "bank": "Comptes bancaires",
       "cash": "Comptes de caisse",
-      "checkings": "Comptes courant",
+      "checkings": "Comptes courants",
+      "creditcard": "Cartes de crédit",
       "credit card": "Cartes de crédit",
       "liability": "Comptes de dettes",
       "none": "Aucun type",
