feat(categories): update KPI translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -249,9 +249,8 @@
     },
     "title": {
       "empty_text": "There is no transactions in this category.",
-      "total": "Balance of the period",
-      "general": "Categorization",
-      "debit": "Net expenditure"
+      "total": "On the period",
+      "general": "Categorization"
     }
   },
   "Transactions": {
