--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -146,7 +146,10 @@
     "headers": {
       "categories": "Catégorie",
       "subcategories": "Sous-catégorie",
-      "transactions": "Opérations",
+      "transactions": {
+        "single": "opération",
+        "plural": "opérations"
+      },
       "debit": "Débit",
       "credit": "Crédit",
       "total": "Total",
