🔨 refactor: rename show12months in showFullYear

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -69,7 +69,7 @@
     "account_name": "Account name"
   },
   "SelectDates": {
-    "last_12_months": "Last 12 months"
+    "all_year": "All year"
   },
   "Accounts": {
     "account": "Account",
