--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -299,7 +299,7 @@
 
 
   "SelectDates": {
-    "last_12_months": "Les 12 derniers mois"
+    "all_year": "Toute l'année"
   },
 
   "Notifications": {
