fix(Categories): update translation when there is no data

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -254,7 +254,7 @@
       "total-header": "Total"
     },
     "title": {
-      "empty_text": "There is no transactions in this category.",
+      "empty_text": "There is no transaction to analyze on this period",
       "total": "On the period",
       "general": "Categorization"
     }
