✨ feat: add manual buttons for infinite scroll on ios

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -292,7 +292,8 @@
     "infos": {
       "account": "Account",
       "institution": "Bank"
-    }
+    },
+    "see-more": "See more..."
   },
 
   "Notifications": {
