--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -120,7 +120,8 @@
     "infos": {
       "account": "Compte",
       "institution": "Banque"
-    }
+    },
+    "see-more": "Voir plus..."
   },
 
   "Categories": {
