--- a/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
+++ b/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
@@ -1,2 +1,3 @@
-• Fix bugs on categorization page
-• Fix a bug on the transaction modal back button
+New features on the "mouvements" & "categories" page!
+• Infinite scrolling to easily go through your transaction historic in the "mouvements" page
+• A new design and a new date picker that ease your budget analysis on the "catégories" page
