feat(notifications): translate some hard coded strings

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -358,6 +358,10 @@
           "treatedBy": "expenditure treated by"
         }
       }
+    },
+    "email": {
+      "settings": "Settings",
+      "support": "Help and support"
     }
   },
 
