--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -370,6 +370,10 @@
           "treatedBy": "dépense traitée par"
         }
       }
+    },
+    "email": {
+      "settings": "Paramètres",
+      "support": "Aide et support"
     }
   },
 
