feat(KonnectorAction): show an informative modal before the intent

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -115,7 +115,14 @@
       },
       "healthExpensePending": "Remboursements en attente",
       "healthExpenseBill": "Relevé %{vendor}",
-      "vendorsGlue": "et"
+      "vendorsGlue": "et",
+      "informativeModal": {
+        "title": "Récupération automatique de mes factures",
+        "description": "Connectez votre compte {brand.name} à votre Cozy pour récupérer vos factures automatiquement.",
+        "caption": "Votre Cozy est totalement privé : personne d'autre que vous ne peut accéder à son contenu.",
+        "cancel": "Annuler",
+        "confirm": "Démarrer"
+      }
     },
     "infos": {
       "account": "Compte",
