--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -287,7 +287,14 @@
       },
       "healthExpensePending": "No reimbursement yet",
       "healthExpenseBill": "%{vendor} Statement",
-      "vendorsGlue": "and"
+      "vendorsGlue": "and",
+      "informativeModal": {
+        "title": "Automatic fetching of my bills",
+        "description": "Connect your %{brand} account to your Cozy to automatically fetch your bills.",
+        "caption": "Your Cozy is totally private: nobody but you can access to its content.",
+        "cancel": "Cancel",
+        "confirm": "Start"
+      }
     },
     "infos": {
       "account": "Account",
