--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -118,7 +118,7 @@
       "vendorsGlue": "et",
       "informativeModal": {
         "title": "Récupération automatique de mes factures",
-        "description": "Connectez votre compte {brand.name} à votre Cozy pour récupérer vos factures automatiquement.",
+        "description": "Connectez votre compte %{brand.name} à votre Cozy pour récupérer vos factures automatiquement.",
         "caption": "Votre Cozy est totalement privé : personne d'autre que vous ne peut accéder à son contenu.",
         "cancel": "Annuler",
         "confirm": "Démarrer"
