--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -290,7 +290,7 @@
       "vendorsGlue": "and",
       "informativeModal": {
         "title": "Automatic fetching of my bills",
-        "description": "Connect your %{brand} account to your Cozy to automatically fetch your bills.",
+        "description": "Connect your %{brandName} account to your Cozy to automatically fetch your bills.",
         "caption": "Your Cozy is totally private: nobody but you can access its content.",
         "cancel": "Cancel",
         "confirm": "Start"
