feat(KonnectorAction): differentiate health and generic content

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -295,9 +295,9 @@
         },
         "generic": {
           "title": "Automatic fetching of my bills",
-          "description": "Connect your %{brandName} account to your Cozy to automatically fetch your bills.",
-          "caption": "Your Cozy is totally private: nobody but you can access its content."
+          "description": "Connect your %{brandName} account to your Cozy to automatically fetch your bills."
         },
+        "caption": "Your Cozy is totally private: nobody but you can access its content.",
         "cancel": "Cancel",
         "confirm": "Start"
       }
