--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -123,9 +123,9 @@
         },
         "generic": {
           "title": "Récupération automatique de mes factures",
-          "description": "Connectez votre compte %{brandName} à votre Cozy pour récupérer vos factures automatiquement.",
-          "caption": "Votre Cozy est totalement privé : personne d'autre que vous ne peut accéder à son contenu."
+          "description": "Connectez votre compte %{brandName} à votre Cozy pour récupérer vos factures automatiquement."
         },
+        "caption": "Votre Cozy est totalement privé : personne d'autre que vous ne peut accéder à son contenu.",
         "cancel": "Annuler",
         "confirm": "Démarrer"
       }
