feat(translations): update informative modal confirm translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -299,7 +299,7 @@
         },
         "caption": "Your Cozy is totally private: nobody but you can access its content.",
         "cancel": "Cancel",
-        "confirm": "Start"
+        "confirm": "Connect"
       }
     },
     "infos": {
