--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -127,7 +127,7 @@
         },
         "caption": "Votre Cozy est totalement privé : personne d'autre que vous ne peut accéder à son contenu.",
         "cancel": "Annuler",
-        "confirm": "Démarrer"
+        "confirm": "Connecter"
       }
     },
     "infos": {
