--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -476,11 +476,13 @@
     "error": "Unable to find the file. It may have been deleted in the Drive application."
   },
 
-  "Warnings": {
-    "gdpr": {
+  "TOS": {
+    "updated": {
       "title": "GDPR comes into reality !",
-      "detail": "In the context of the General Data Protection Regulation, our Terms of Service have been updated and will apply to all our Cozy users on May 25, 2018.",
-      "cta": "Read the updates"
+      "detail": "In the context of the General Data Protection Regulation, [our Terms of Service have been updated](%{link}) and will apply to all our Cozy users on May 25, 2018.",
+      "cta": "Accept TOS and continue",
+      "disconnect": "Refuse and disconnect",
+      "error": "Something went wrong, please try again later"
     }
   }
 }
