feat(translations): rename movements to translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
     "savings": "Savings",
     "projections": "Forecasts",
     "balance": "Current balance",
-    "movements": "Movements"
+    "movements": "Transactions"
   },
   "Error": {
     "more-information": "More information",
