refactor: Replace Notifications with Configuration

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -390,7 +390,7 @@
     "title": "Settings",
     "accounts": "Accounts",
     "groups": "Groups",
-    "notifications": "Notifications",
+    "configuration": "Configuration",
     "app": "App"
   },
 
