--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -402,7 +402,7 @@
     "title": "Paramètres",
     "accounts": "Comptes",
     "groups": "Groupes",
-    "notifications": "Notifications"
+    "configuration": "Configuration"
   },
 
   "Onboarding": {
