--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -409,7 +409,7 @@
     "title": "Fonctions communautaires",
     "auto_categorization": {
       "title": "Catégorisation automatique des écritures",
-      "subtitle": "Participer à l'amélioration du modèle par le partage anonymisé de vos écritures catégorisées. [En savoir plus](https://support.cozy.io/article/181-collaboration-a-la-categorisation-bancaire)"
+      "subtitle": "Participer à l'amélioration du modèle par le partage anonymisé de vos écritures catégorisées. <a href='https://support.cozy.io/article/181-collaboration-a-la-categorisation-bancaire' target='_blank'>En savoir plus</a>"
     }
   },
 
