--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -390,8 +390,16 @@
     "title": "Settings",
     "accounts": "Accounts",
     "groups": "Groups",
-    "notifications": "Notifications",
+    "configuration": "Configuration",
     "app": "App"
+  },
+
+  "CommunitySettings": {
+    "title": "Community-based features",
+    "auto_categorization": {
+      "title": "Automatic categorization of your transactions",
+      "subtitle": "Help us improve the model by anonymously sharing your categorized transactions. <a href='https://support.cozy.io/article/181-collaboration-a-la-categorisation-bancaire' target='_blank'>More</a>)"
+    }
   },
 
   "AppSettings": {
