--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -402,7 +402,15 @@
     "title": "Paramètres",
     "accounts": "Comptes",
     "groups": "Groupes",
-    "notifications": "Notifications"
+    "configuration": "Configuration"
+  },
+
+  "CommunitySettings": {
+    "title": "Fonctions communautaires",
+    "auto_categorization": {
+      "title": "Catégorisation automatique des écritures",
+      "subtitle": "Participer à l'amélioration du modèle par le partage anonymisé de vos écritures catégorisées. <a href='https://support.cozy.io/article/181-collaboration-a-la-categorisation-bancaire' target='_blank'>En savoir plus</a>"
+    }
   },
 
   "Onboarding": {
