feat: Add a missing translation 🇸🇳

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,6 +91,7 @@
     "create": "Create a group",
     "label": "Label",
     "banks": "Banks",
+    "bank": "Bank",
     "accounts": "Accounts",
     "groups": "Groups",
     "delete": "remove",
