--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -303,6 +303,7 @@
     "groups": "Groupes",
     "label": "Libellé",
     "banks": "Banques",
+    "bank": "Banque",
     "accounts": "Comptes",
     "create": "créer",
     "edit": "éditer",
