feat: Add balance History component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -494,5 +494,9 @@
       "disconnect": "Refuse and disconnect",
       "error": "Something went wrong, please try again later"
     }
+  },
+
+  "BalanceHistory": {
+    "subtitle": "Total balance"
   }
 }
