fix: Translate label of new group

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -89,6 +89,7 @@
     "edit": "edit",
     "manage-groups": "Manage my groups",
     "create": "Create a group",
+    "new-group": "New Group",
     "label": "Label",
     "banks": "Banks",
     "bank": "Bank",
