--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -305,6 +305,7 @@
     "banks": "Banques",
     "bank": "Banque",
     "accounts": "Comptes",
+    "new-group": "Nouveau groupe",
     "create": "créer",
     "edit": "éditer",
     "manage-groups": "Gérer mes groupes",
