feat: Delete account from Cozy Home 🔥

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -54,7 +54,7 @@
     "delete": "Effacer",
     "deleting": "Effacement...",
     "confirm-deletion": {
-      "description": "Cette action supprimera les mouvements déjà présents dans l'application Banks, ainsi que les liens avec vos factures. Supprimez également votre compte depuis #{LINK}l'app Cozy Collect#{/LINK}, si vous ne souhaitez pas réimporter vos données à la prochaine synchronisation.",
+      "description": "Cette action supprimera les mouvements déjà présents dans l'application Banks, ainsi que les liens avec vos factures. Supprimez également votre compte depuis #{LINK}l'app #{APP_NAME}#{/LINK}, si vous ne souhaitez pas réimporter vos données à la prochaine synchronisation.",
       "confirm": "Confirmer la suppression",
       "title": "Êtes-vous sûr ?"
     }
