feat: original label (behind originalBankLabel)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -309,7 +309,8 @@
     },
     "infos": {
       "account": "Account",
-      "institution": "Bank"
+      "institution": "Bank",
+      "originalBankLabel": "Original label"
     },
     "see-more": "See more..."
   },
