--- a/src/targets/mobile/fastlane/metadata/ios/fr-FR/release_notes.txt
+++ b/src/targets/mobile/fastlane/metadata/ios/fr-FR/release_notes.txt
@@ -1,6 +1,2 @@
-Du neuf pour vos pages mouvements et catégories !
-• Le défilement infini pour remonter votre historique en toute simplicité sur la page "mouvements";
-• Un nouveau design et un nouveau sélecteur de date pour la page "catégories" : pour une analyse plus facile et plus rapide de votre budget;
-• De nouvelles banques sont disponibles;
-• Nous avons amélioré la synchronisation;
-• Désormais, le nom de la banque s'affiche sur chaque opération.
+Merci d'utiliser Cozy Banks!
+Dans cette version nous rendons compatible Cozy Banks avec la nouvelle page d'accueil Cozy, qui va être déployée très prochainement ;)
