--- a/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
+++ b/src/targets/mobile/fastlane/metadata/ios/en-US/release_notes.txt
@@ -1,6 +1,2 @@
-Thanks for using Cozy Banks. In this new version:
-• Infinite scrolling to easily go through your transaction history in the "mouvements" page;
-• A new design and a new date picker that ease your budget analysis on the "catégories" page;
-• New banks are available;
-• We improved synchronization;
-• From now on, the bank name is displayed on every transaction.
+Thank you for using Cozy Banks ! 
+This new version allows you to interact with your new Cozy Homepage, that is being released in a few days ;)
