feat(mobile): Add a modal during logout cleanup

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -501,5 +501,9 @@
 
   "BalanceHistory": {
     "subtitle": "All accounts"
+  },
+
+  "LogoutModal": {
+    "message": "Logout in progress..."
   }
 }
