--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -454,5 +454,9 @@
 
   "BalanceHistory": {
     "subtitle": "Tous les comptes"
+  },
+
+  "LogoutModal": {
+    "message": "Déconnexion en cours..."
   }
 }
