refactor: Case for translation keys is snake_case

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -375,7 +375,7 @@
         "title": "New health reimbursements found",
         "content": {
           "title": "Health reimbursement notification",
-          "treatedBy": "expenditure treated by"
+          "treated_by": "Treated by"
         }
       }
     },
