feat: Put access my account at the bottom of the email

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -333,6 +333,9 @@
     "if_balance_lower": {
       "description": "You will receive a notification if your balance is less than",
       "title": "Balance threshold",
+      "email": {
+        "access_accounts": "Access my accounts"
+      },
       "notification": {
         "one": {
           "title": "Balance alert: '%{label}' account is at %{balance}%{currency}",
