fix: Translate and tweak email titles

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -332,8 +332,9 @@
     },
     "if_balance_lower": {
       "description": "You will receive a notification if your balance is less than",
-      "title": "Balance threshold",
+      "title": "Low balances",
       "email": {
+        "title": "Low balances notification",
         "access_accounts": "Access my accounts"
       },
       "notification": {
@@ -350,14 +351,17 @@
     },
     "if_transaction_greater": {
       "description": "You will receive a notification if a movement is greater than",
-      "title": "Movement amount",
+      "title": "Transaction",
+      "email": {
+        "title": "Transaction notification"
+      },
       "notification": {
         "debit": {
-          "title": "Alert: debit of %{amount}%{currency}",
+          "title": "Debit of %{amount}%{currency}",
           "content": "%{label}"
         },
         "credit": {
-          "title": "Alert: credit of %{amount}%{currency}",
+          "title": "Credit of %{amount}%{currency}",
           "content": "%{label}"
         },
         "others": {
@@ -378,7 +382,7 @@
       },
       "description": "You will be notified when a reimbursement is found for a medical expense. This requires to connect your Cozy to your medical insurance.",
       "notification": {
-        "title": "New health reimbursements found",
+        "title": "Medical expense coverage notification",
         "content": {
           "title": "Health reimbursement notification",
           "treated_by": "Treated by"
