--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -351,7 +351,7 @@
     },
     "if_transaction_greater": {
       "description": "You will receive a notification if a movement is greater than",
-      "title": "Transaction",
+      "title": "Transactions",
       "email": {
         "title": "Transaction notification"
       },
